[gd_scene load_steps=7 format=3 uid="uid://cenlcqwtlieof"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_mn0hu"]
[ext_resource type="FontFile" uid="uid://bbpi33mwoxofs" path="res://Assets/PixelOperator8.ttf" id="2_i7oee"]
[ext_resource type="FontFile" uid="uid://2mp4xbqlji6v" path="res://Assets/8-bit-pusab.ttf" id="3_t0qyl"]
[ext_resource type="Texture2D" uid="uid://ccitvnmtbny6m" path="res://Assets/background.png" id="4_6fnbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un76l"]
bg_color = Color(0.654902, 0.941176, 0.439216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tope0"]
bg_color = Color(0.219608, 0.717647, 0.392157, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mn0hu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("4_6fnbt")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 320.0
offset_right = 752.0
offset_bottom = 508.0
theme_override_constants/separation = 50

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_constants/h_separation = 20
theme_override_fonts/font = ExtResource("2_i7oee")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_un76l")
theme_override_styles/normal = SubResource("StyleBoxFlat_tope0")
text = "Start"

[node name="How to play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_constants/h_separation = 20
theme_override_fonts/font = ExtResource("2_i7oee")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_un76l")
theme_override_styles/normal = SubResource("StyleBoxFlat_tope0")
text = "How to play"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_constants/h_separation = 20
theme_override_fonts/font = ExtResource("2_i7oee")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_un76l")
theme_override_styles/normal = SubResource("StyleBoxFlat_tope0")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 144.0
offset_right = 960.0
offset_bottom = 240.0
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_t0qyl")
theme_override_font_sizes/font_size = 50
text = "BioLab Breakout"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
